<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/tv_notes_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/new_notes_item"
        android:text="@string/note_label"
        android:layout_alignBaseline="@id/new_notes_item"
        android:layout_alignParentStart="true"
        android:textSize="18sp"
        android:layout_margin="18dp"/>

    <EditText
        android:id="@+id/new_notes_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_note_hint"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@id/tv_notes_label"/>

    <TextView
        android:id="@+id/tv_description_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/new_description_item"
        android:text="@string/description_label"
        android:layout_alignBaseline="@+id/new_description_item"
        android:layout_alignParentStart="true"
        android:layout_below="@id/tv_notes_label"
        android:textSize="18sp"
        android:layout_margin="16dp"/>

    <EditText
        android:id="@+id/new_description_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_description_hint"
        android:layout_below="@id/new_notes_item"
        android:layout_toEndOf="@id/tv_description_label"/>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_description_label"
        android:textSize="18sp"
        android:text="@string/btn_save"
        android:layout_margin="16dp"/>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/btn_cancel"
        android:textSize="18sp"
        android:layout_margin="16dp"
        android:layout_below="@id/tv_description_label"/>

</RelativeLayout>
